--- a/views/details.handlebars
+++ b/views/details.handlebars
@@ -3,7 +3,7 @@
     <li class="list-group-item"><strong>Email : </strong>{{user.email}}</li>
     <li class="list-group-item"><strong>Phone : </strong>{{user.phone}}</li>
 </ul>
-<a class="btn btn-primary float-left" href="/">Back</a>
+<a class="btn btn-primary float-left" style="margin-top: 5px" href="/">Back</a>
 <form method="POST" action="/user/delete/{{user.id}}?_method=DELETE">
-    <input type="submit" class="btn btn-danger float-right" value="Delete">
+    <input type="submit" class="btn btn-danger float-right" style="margin-top: 5px" value="Delete">
 </form>
